# rule-lang

./: LICENSE  README.md  hie.yaml  package.yaml  rule-lang.cabal  stack.yaml
app/: Main.hs  Output.hs
app/Sunburst/: D3.hs  Highcharts.hs
bench/: Main.hs
data/: inputdata.json  rulelang.xml
src/: Absyn.hs  AbsynFun.hs  Comparison.hs  Eval.hs  LangPrelude.hs  Parse.hs  Pretty.hs  QuasiQuote.hs  Syntax.hs  Test.hs  Tree.hs  Types.hs
src/Analyze/: Check.hs
src/Check/: Type.hs
src/Eval/: Bool.hs  Common.hs  DataExpr.hs  Debug.hs  Env.hs  Eval.hs  GroupComparison.hs  GroupFold.hs  GroupValueExpr.hs  Grouping.hs  LangExpr.hs  Monad.hs  Result.hs  RuleExpr.hs  Types.hs
src/Examples/: Expr.hs  Rules.hs
src/Examples/Test/: Pos.hs
src/Report/: ParserExample.hs
src/Rules/: CountryBondValue.hs  DataExpr.hs  FiveTenForty.hs  Syntax.hs  ThirtyfiveSixtySix.hs
test/: Orphans.hs  Spec.hs  Unit.hs
test/Spec/: Parse.hs
test/Unit/: Eval.hs  Parse.hs  PrintParse.hs
weigh/: Main.hs
