cabal-version: 1.12

name:           rule-lang
version:        0.1.0.0
homepage:       https://github.com/runeksvendsen/rule-lang
bug-reports:    https://github.com/runeksvendsen/rule-lang/issues
author:         Rune K. Svendsen
maintainer:     runesvend@gmail.com
license:        MIT
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/runeksvendsen/rule-lang

library
  exposed-modules:
      Absyn
      Comparison
      Eval.Common
      Eval.DataExpr
      Eval.GroupFold
      Eval.Grouping
      Eval.GroupValueExpr
      Eval.Monad
      Eval.Result
      Eval.RuleExpr
      Eval.Types
      LangPrelude
      Pretty
      Rules.CountryBondValue
      Rules.FiveTenForty
      Rules.Syntax
      Tree
      Types
  other-modules:
      Paths_rule_lang
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings StandaloneDeriving DeriveGeneric NoImplicitPrelude FlexibleContexts
  ghc-options: -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , containers
    , errors
    , hashable
    , megaparsec
    , protolude
    , text
    , transformers
    , unordered-containers
  default-language: Haskell2010

executable rule-lang-exe
  main-is: Main.hs
  other-modules:
      Output
      Sunburst.D3
      Sunburst.Highcharts
      Paths_rule_lang
  hs-source-dirs:
      app
  default-extensions: OverloadedStrings StandaloneDeriving DeriveGeneric NoImplicitPrelude FlexibleContexts
  ghc-options: -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , hashable
    , rule-lang
    , text
    , unordered-containers
  default-language: Haskell2010
